--- a/Prevu.Details/BaleBraker/DET_021_BB_Hyd4Shaft.xaml
+++ b/Prevu.Details/BaleBraker/DET_021_BB_Hyd4Shaft.xaml
@@ -4,15 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
-             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Valves="clr-namespace:Prevu.Drawings.Machines.Valves;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.DET_021_BB_Hyd4Shaft" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
              mc:Ignorable="d" 
-             Height="486" Width="694" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas  Height="486" Width="625">
-        <Labels:Pipe Width="25" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="10" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="471" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="104" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="243" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_021_BB_Hyd4Shaft" >
+
+    <Canvas Height="486" Width="657">
+        <Labels:Pipe Width="25" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="40" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="454" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="134" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="269" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,7 +23,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="402" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="419" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +33,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="210" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="1" Canvas.Top="234" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="210" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="31" Canvas.Top="234" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +43,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="-12" Canvas.Top="360">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="18" Canvas.Top="360">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,9 +53,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="60" Canvas.Top="338"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="222" Canvas.Top="291"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="304" Canvas.Top="338">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="90" Canvas.Top="338"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="133" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="252" Canvas.Top="291"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="334" Canvas.Top="338">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -64,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="172" Canvas.Top="339">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="203" Canvas.Top="340">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -74,8 +75,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="30" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="180" Canvas.Top="338"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="183" Canvas.Top="360">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="210" Canvas.Top="338"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="213" Canvas.Top="360">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -85,92 +86,47 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:EXC_Air HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="81" Canvas.Left="313" Canvas.Top="317"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="134" Canvas.Top="316"/>
-        <Rectangle HorizontalAlignment="Left" Height="86" VerticalAlignment="Center" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="-8" Canvas.Top="381"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="444" Canvas.Top="413"/>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="40" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="474" Canvas.Top="405">
-            <Machines:WaterPump.RenderTransform>
+        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="569" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="256" Canvas.Top="272">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="44" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="25" Canvas.Top="318">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="68" Canvas.Left="92" Canvas.Top="406">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:V01_EXC_CoolingFan Canvas.Left="343" Canvas.Top="317" Height="30" Width="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_Valve Canvas.Left="164" Canvas.Top="316" Height="48" Width="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="405" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="105" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="255" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="555" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_AuxHydraulicOilTank Canvas.Left="474" Canvas.Top="413" HorizontalAlignment="Center" Height="44" VerticalAlignment="Top" Width="100"/>
+        <Machines:V01_WaterPump Canvas.Left="504" Canvas.Top="405" Color="Oil" Height="58" Width="40" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WaterPump Canvas.Left="286" Canvas.Top="272" Color="Oil" Height="45" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WaterPump Canvas.Left="55" Canvas.Top="318" Color="Oil" Height="45" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="22" Canvas.Top="381"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="122" Canvas.Top="406" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
+            <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="-90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Machines:CV_ValveDouble Canvas.Left="388" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_ValveDouble Canvas.Left="75" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_ValveDouble Canvas.Left="229" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-42-TT1" Canvas.Left="211" Canvas.Top="398"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-11-R1" Canvas.Left="14" Canvas.Top="398"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-01-MA1" Canvas.Left="3" Canvas.Top="264"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-21-CV1" Canvas.Left="118" Canvas.Top="265"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-03-MA1" Canvas.Left="371" Canvas.Top="257"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-02-MA1" Canvas.Left="235" Canvas.Top="214"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         ComponentName="020-04-MA1" Canvas.Left="448" Canvas.Top="354"/>
-        <Labels:DeviceLabel 
-            ComponentName="020-24-CV1" Canvas.Left="374" Canvas.Top="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="020-22-CV1" Canvas.Left="61" Canvas.Top="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="020-23-CV1" Canvas.Left="215" Canvas.Top="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="556" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:CV_ValveDouble Canvas.Left="542" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="020-25-CV1" Canvas.Left="528" Canvas.Top="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
+        </Machines:V01_SCW_ScrewConveyor_straight>
+        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="33" Canvas.Top="264"/>
+        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="265" Canvas.Top="214"/>
+        <Labels:DeviceLabel ComponentName="020-03-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="401" Canvas.Top="257"/>
+        <Labels:DeviceLabel ComponentName="020-04-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="478" Canvas.Top="354"/>
+        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="44" Canvas.Top="398"/>
+        <Labels:DeviceLabel ComponentName="020-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="148" Canvas.Top="265"/>
+        <Labels:DeviceLabel ComponentName="020-22-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="91" Canvas.Top="48"/>
+        <Labels:DeviceLabel ComponentName="020-23-CV1" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="241" Canvas.Top="48"/>
+        <Labels:DeviceLabel ComponentName="020-24-CV1" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="391" Canvas.Top="48"/>
+        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="241" Canvas.Top="398"/>
+        <Labels:DeviceLabel ComponentName="020-25-CV1" Canvas.Left="541" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
