--- a/Prevu.Details/DCE/DET_013_DCE10_20_CleaningValves.xaml
+++ b/Prevu.Details/DCE/DET_013_DCE10_20_CleaningValves.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="Prevu.Synoptics.DET_013_DCE10_20_CleaningValves"
+﻿<UserControl 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+             xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_013_DCE10_20_CleaningValves">
     <Canvas Height="313" Width="520" >
         <Machines:V01_DCE10_20_DETAIL_CleaningValve Canvas.Left="12" Canvas.Top="18" HorizontalAlignment="Left" VerticalAlignment="Center" Width="492" Height="277"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-20-VB1" Canvas.Left="27" Canvas.Top="30"/>
         <Rectangle Height="66" Stroke="Black" Width="2" Canvas.Left="331" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -71,9 +71,10 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-27-CV1" Canvas.Left="220" Canvas.Top="14"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="380-27-CV2" Canvas.Left="220" Canvas.Top="89"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="380-27-CV3" Canvas.Left="220" Canvas.Top="164"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="380-27-CV4" Canvas.Left="220" Canvas.Top="239"/>
+        <Labels:DeviceLabel ComponentName="380-20-VB1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="27" Canvas.Top="30"/>
+        <Labels:DeviceLabel ComponentName="380-27-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="220" Canvas.Top="14"/>
+        <Labels:DeviceLabel ComponentName="380-27-CV2" HorizontalAlignment="Center" VerticalAlignment="Top"  Canvas.Left="220" Canvas.Top="89"/>
+        <Labels:DeviceLabel ComponentName="380-27-CV3" HorizontalAlignment="Center" VerticalAlignment="Top"  Canvas.Left="220" Canvas.Top="164"/>
+        <Labels:DeviceLabel ComponentName="380-27-CV4" HorizontalAlignment="Center" VerticalAlignment="Top"  Canvas.Left="220" Canvas.Top="239"/>
     </Canvas>
 </UserControl>
