--- a/Prevu.Details/EddyCurrent/DET_028_ED_CU_Table_Conveyor_Roll_Drum.xaml
+++ b/Prevu.Details/EddyCurrent/DET_028_ED_CU_Table_Conveyor_Roll_Drum.xaml
@@ -4,11 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" xmlns:VibratingScreens="clr-namespace:Prevu.Drawings.Machines.VibratingScreens;assembly=Prevu.Drawings" xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.DET_028_ED_CU_Table_Conveyor_Roll_Drum" 
              mc:Ignorable="d"  
-            d:Background="{DynamicResource MaterialDesignPaper}" >
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_028_ED_CU_Table_Conveyor_Roll_Drum">
     <Canvas Height="394" Width="615">
         <Labels:Pipe Width="94" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="504" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -83,39 +83,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:DeviceLabel 
-            ComponentName="557-04-MA1" Canvas.Left="305" Canvas.Top="70" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="557-02-MA1" Canvas.Left="322" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="557-03-MA1" Canvas.Left="498" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="212" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="496" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="564" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="20" Canvas.Top="12" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="536" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Machines:V01_Waste Canvas.Left="566" Canvas.Top="318" Height="40" Width="40"/>
+        <Machines:V01_Waste Canvas.Left="498" Canvas.Top="318" Height="40" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_Waste Canvas.Left="214" Canvas.Top="177" Height="40" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="15" Canvas.Top="45" Height="91" Width="219" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="557-01-MA1" Canvas.Left="74" Canvas.Top="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_MagneticRoll Canvas.Left="254" Canvas.Top="116" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_NT_Belt_wMagneticRoll Canvas.Left="291" Canvas.Top="203" Height="104" Width="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="20" Canvas.Top="12" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="536" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="557-01-MA1" Canvas.Left="74" Canvas.Top="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="557-04-MA1" Canvas.Left="305" Canvas.Top="70" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="557-02-MA1" Canvas.Left="322" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="557-03-MA1" Canvas.Left="498" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
