--- a/Prevu.Details/Hoppers/DET_010_LEV_ScrewHopper.xaml
+++ b/Prevu.Details/Hoppers/DET_010_LEV_ScrewHopper.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.DET_010_LEV_ScrewHopper"
+﻿<UserControl 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,11 +7,12 @@
 		     xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_010_LEV_ScrewHopper">
     <Canvas Height="386" MinWidth="380">
         <Machines:V01_SCW_Screw_wHopper Height="366" Width="360" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="10" Canvas.Left="10"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-61-LEV" SignalName="LSH" Canvas.Left="23" Canvas.Top="156" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-61-LEV" SignalName="LSL" Canvas.Left="37" Canvas.Top="222"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-61-LEV" Canvas.Left="70" Canvas.Top="76"/>
+        <Labels:SignalLabel ComponentName="376-61-LEV" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="23" Canvas.Top="156" />
+        <Labels:SignalLabel ComponentName="376-61-LEV" SignalName="LSL" HorizontalAlignment="Left" VerticalAlignment="Top"  Canvas.Left="37" Canvas.Top="222"/>
+        <Labels:DeviceLabel ComponentName="376-61-LEV" HorizontalAlignment="Left" VerticalAlignment="Top"  Canvas.Left="70" Canvas.Top="76"/>
     </Canvas>
 </UserControl>
