--- a/Prevu.Details/Hoppers/DET_026_LEV_3Lev_FKS.xaml
+++ b/Prevu.Details/Hoppers/DET_026_LEV_3Lev_FKS.xaml
@@ -4,16 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:FlakesSorting="clr-namespace:Prevu.Drawings.Machines.FlakesSorting;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.DET_026_LEV_3Lev_FKS" 
              mc:Ignorable="d" 
-              d:Background="{DynamicResource MaterialDesignPaper}" >
+             d:Background="{DynamicResource MaterialDesignPaper}" 
+             x:Class="Prevu.Synoptics.DET_026_LEV_3Lev_FKS" >
     <Canvas Height="427" Width="275">
         <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="10" Canvas.Top="10" Height="407" Width="256" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSHA" Canvas.Left="110" Canvas.Top="32"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSH" Canvas.Left="110" Canvas.Top="81" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSL" Canvas.Left="112" Canvas.Top="175"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" Canvas.Left="100" Canvas.Top="214"/>
+        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="110" Canvas.Top="32"/>
+        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="110" Canvas.Top="81" />
+        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSL" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="112" Canvas.Top="175"/>
+        <Labels:DeviceLabel ComponentName="880-61-LEV" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="100" Canvas.Top="214"/>
     </Canvas>
 </UserControl>
