--- a/Prevu.Details/SeparationTank/DET_011_SEP_7PaddlesDistributors.xaml
+++ b/Prevu.Details/SeparationTank/DET_011_SEP_7PaddlesDistributors.xaml
@@ -4,33 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
-             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.DET_011_SEP_7PaddlesDistributors" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_011_SEP_7PaddlesDistributors" >
     <Canvas Height="226" Width="829">
         <Machines:V01_VSP_DETAIL_SepTank_w7Paddles_4Distributor Canvas.Left="10" Canvas.Top="10" Height="205" Width="812" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-		VerticalAlignment="Top" 
-		ComponentName="430-01-MA1" Canvas.Left="6" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA2" Canvas.Left="112" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA3" Canvas.Left="217" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA4" Canvas.Left="323" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA6" Canvas.Left="509" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA7" Canvas.Left="621" Canvas.Top="84"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA8" Canvas.Left="732" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="6" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA2" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="112" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA3" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="217" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA4" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="323" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA6" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="509" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA7" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="621" Canvas.Top="84"/>
+        <Labels:DeviceLabel ComponentName="430-01-MA8" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="732" Canvas.Top="84"/>
     </Canvas>
 </UserControl>
