--- a/Prevu.Details/SeparationTank/DET_012_SEP_4Distributor.xaml
+++ b/Prevu.Details/SeparationTank/DET_012_SEP_4Distributor.xaml
@@ -4,24 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.DET_012_SEP_4Distributor" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_012_SEP_4Distributor" >
     <Canvas Height="388"  Width="565">
         <Machines:V01_VSP_DETAIL_SepTank_w4Distributors Canvas.Left="10" Canvas.Top="50" Height="335" Width="545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-		VerticalAlignment="Top" 
-		ComponentName="430-02-MA1" Canvas.Left="78" Canvas.Top="29"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA2" Canvas.Left="183" Canvas.Top="30"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA3" Canvas.Left="285" Canvas.Top="29"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA4" Canvas.Left="391" Canvas.Top="29"/>
+        <Labels:DeviceLabel ComponentName="430-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="78" Canvas.Top="29"/>
+        <Labels:DeviceLabel ComponentName="430-02-MA2" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="183" Canvas.Top="30"/>
+        <Labels:DeviceLabel ComponentName="430-02-MA3" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="285" Canvas.Top="29"/>
+        <Labels:DeviceLabel ComponentName="430-02-MA4" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="391" Canvas.Top="29"/>
     </Canvas>
 </UserControl>
