--- a/Prevu.Details/Silos/DET_003_SLX_MixSiloWeight.xaml
+++ b/Prevu.Details/Silos/DET_003_SLX_MixSiloWeight.xaml
@@ -1,20 +1,18 @@
-﻿<UserControl x:Class="Prevu.Synoptics.DET_003_SLX_MixSiloWeight"
+﻿<UserControl 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}">
+             d:Background="{DynamicResource MaterialDesignPaper}"
+             x:Class="Prevu.Synoptics.DET_003_SLX_MixSiloWeight">
     <Canvas Height="450" Width="332">
         <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="83"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="810-01-MA1" Canvas.Left="117" Canvas.Top="26"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            ComponentName="810-41-WT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="810-41-WT1" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="83"/>
+        <Labels:DeviceLabel ComponentName="810-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="117" Canvas.Top="26"/>
+        <Labels:DeviceLabel ComponentName="810-41-WT1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="163"/>
     </Canvas>
 </UserControl>
